InProgress #2502 - [Feature] Glop service